--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.allerton</groupId>
     <artifactId>nimbus</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>nimbus-deployment</module>
+    </modules>
 
 
     <properties>
