--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,7 @@
 
     <groupId>com.allerton</groupId>
     <artifactId>nimbus</artifactId>
-    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>nimbus-deployment</module>
-    </modules>
 
 
     <properties>
@@ -86,12 +82,16 @@
                     <execution>
                         <id>java-compile</id>
                         <phase>compile</phase>
-                        <goals> <goal>compile</goal> </goals>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
                     </execution>
                     <execution>
                         <id>java-test-compile</id>
                         <phase>test-compile</phase>
-                        <goals> <goal>testCompile</goal> </goals>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
                     </execution>
                 </executions>
                 <configuration>
