--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>nimbus</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <properties>
         <auto-service.version>1.0-rc2</auto-service.version>
         <kotlin.version>1.3.11</kotlin.version>
@@ -39,6 +38,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
             <version>2.9.8</version>
         </dependency>
     </dependencies>
