--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,16 @@
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>2.9.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-lambda</artifactId>
+            <version>1.11.475</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-core</artifactId>
+            <version>1.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
