--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <auto-service.version>1.0-rc2</auto-service.version>
-        <kotlin.version>1.3.11</kotlin.version>
+        <kotlin.version>1.3.20</kotlin.version>
         <aws.version>1.11.475</aws.version>
     </properties>
 
@@ -71,6 +71,16 @@
             <artifactId>kotlin-reflect</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${kotlin.version}</version>
         </dependency>
     </dependencies>
 
