--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,15 @@
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+
+
+        <!-- For tests dependencies -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.198</version>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
@@ -101,6 +110,8 @@
             <version>0.15</version>
             <scope>test</scope>
         </dependency>
+
+
     </dependencies>
 
     <build>
