Can create a local webserver

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
 
         <!-- For tests dependencies -->
         <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.4.15.v20190215</version>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.198</version>
