--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <auto-service.version>1.0-rc2</auto-service.version>
         <kotlin.version>1.3.20</kotlin.version>
-        <aws.version>1.11.475</aws.version>
+        <aws.version>1.11.477</aws.version>
     </properties>
 
     <dependencies>
@@ -59,6 +59,11 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-dynamodb</artifactId>
+            <version>${aws.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-apigatewaymanagementapi</artifactId>
             <version>${aws.version}</version>
         </dependency>
         <dependency>
