--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <auto-service.version>1.0-rc2</auto-service.version>
         <kotlin.version>1.3.20</kotlin.version>
         <aws.version>1.11.477</aws.version>
+        <jetty.version>9.4.15.v20190215</jetty.version>
     </properties>
 
     <dependencies>
@@ -117,9 +118,19 @@
 
         <!-- For tests dependencies -->
         <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-api</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-server</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <version>9.4.15.v20190215</version>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
