--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.nimbusframework</groupId>
     <artifactId>nimbus-core</artifactId>
-    <version>0.4-SNAPSHOT</version>
+    <version>0.4</version>
     <packaging>jar</packaging>
 
     <name>Nimbus core</name>
@@ -33,7 +32,7 @@
         <connection>scm:git:git://github.com/thomasjallerton/nimbus-core.git</connection>
         <developerConnection>scm:git:ssh://github.com:thomasjallerton/nimbus-core.git</developerConnection>
         <url>http://github.com/thomasjallerton/nimbus-core/tree/master</url>
-        <tag>HEAD</tag>
+        <tag>nimbus-core-0.4</tag>
     </scm>
 
     <distributionManagement>
