--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <name>Nimbus core</name>
-    <description>Annotation processor and com.nimbusframework.nimbuscore.testing classes for nimbus</description>
+    <description>Annotation processor and testing classes for nimbus</description>
     <url>https://www.nimbusframework.com</url>
 
     <developers>
@@ -52,7 +52,7 @@
         <auto-service.version>1.0-rc2</auto-service.version>
         <kotlin.version>1.3.20</kotlin.version>
         <aws.version>1.11.477</aws.version>
-        <jetty.version>9.4.15.v20190215</jetty.version>
+        <jetty.version>9.4.17.v20190418</jetty.version>
     </properties>
 
     <dependencies>
