--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-events</artifactId>
-            <version>RELEASE</version>
+            <version>2.2.6</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
