--- a/src/main/react/webconsole/package.json
+++ b/src/main/react/webconsole/package.json
@@ -2,6 +2,7 @@
   "name": "webconsole",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://localhost:8080/NimbusWebConsole",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
