--- a/core/pom.xml
+++ b/core/pom.xml
@@ -50,7 +50,7 @@
 
     <properties>
         <auto-service.version>1.0-rc2</auto-service.version>
-        <kotlin.version>1.3.20</kotlin.version>
+        <kotlin.version>1.3.50</kotlin.version>
         <aws.version>1.11.477</aws.version>
         <jetty.version>9.4.17.v20190418</jetty.version>
         <jackson.version>2.10.0.pr1</jackson.version>
@@ -74,12 +74,6 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
-            <version>${kotlin.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
@@ -98,9 +92,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.testing.compile</groupId>
-            <artifactId>compile-testing</artifactId>
-            <version>0.15</version>
+            <groupId>io.kotlintest</groupId>
+            <artifactId>kotlintest-runner-junit5</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit</artifactId>
+            <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
 
