--- a/aws/pom.xml
+++ b/aws/pom.xml
@@ -11,6 +11,13 @@
   <description>AWS CloudFormation generation of nimbus annotations</description>
   <url>https://www.nimbusframework.com</url>
 
+<parent>
+    <groupId>com.nimbusframework</groupId>
+    <artifactId>nimbus-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+</parent>
+
+
   <developers>
     <developer>
       <name>Thomas Allerton</name>
@@ -49,11 +56,28 @@
 
 
   <properties>
+<!--
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <auto-service.version>1.0-rc2</auto-service.version>
     <kotlin.version>1.3.61</kotlin.version>
     <aws.version>1.11.477</aws.version>
     <jetty.version>9.4.17.v20190418</jetty.version>
     <jackson.version>2.10.0.pr1</jackson.version>
+
+
+      <aws-lambda-java-core.version>1.2.0</aws-lambda-java-core.version>
+      <aws-lambda-java-events.version>2.2.6</aws-lambda-java-events.version>
+      <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
+      <postgresql.version>42.2.5</postgresql.version>
+      <mssql-jdbc.version>7.2.1.jre8</mssql-jdbc.version>
+      <mariadb-java-client.version>2.4.0</mariadb-java-client.version>
+      <h2.version>1.4.198</h2.version>
+      <reflections.version>0.9.10</reflections.version>
+      <junit.version>4.13-rc-1</junit.version>
+      <compile-testing.version>0.15</compile-testing.version>
+      <kotlintest-runner-junit5.version>3.3.0</kotlintest-runner-junit5.version>
+      <mockk.version>1.9.3</mockk.version>
+-->
   </properties>
 
   <dependencies>
@@ -70,7 +94,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.5</version>
+      <version>${gson.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
@@ -121,17 +145,17 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
-      <version>1.2.0</version>
+      <version>${aws-lambda-java-core.version}</version>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
-      <version>2.2.6</version>
+      <version>${aws-lambda-java-events.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-reflect</artifactId>
-      <version>RELEASE</version>
+      <version>${kotlin.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -144,22 +168,22 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.15</version>
+      <version>${mysql-connector-java.version}</version>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.2.5</version>
+      <version>${postgresql.version}</version>
     </dependency>
     <dependency>
       <groupId>com.microsoft.sqlserver</groupId>
       <artifactId>mssql-jdbc</artifactId>
-      <version>7.2.1.jre8</version>
+      <version>${mssql-jdbc.version}</version>
     </dependency>
     <dependency>
       <groupId>org.mariadb.jdbc</groupId>
       <artifactId>mariadb-java-client</artifactId>
-      <version>2.4.0</version>
+      <version>${mariadb-java-client.version}</version>
     </dependency>
 
     <!-- For tests dependencies -->
@@ -181,32 +205,32 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>1.4.198</version>
+      <version>${h2.version}</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.reflections</groupId>
       <artifactId>reflections</artifactId>
-      <version>0.9.10</version>
+      <version>${reflections.version}</version>
     </dependency>
 
     <!-- Test Dependencies-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13-rc-1</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.testing.compile</groupId>
       <artifactId>compile-testing</artifactId>
-      <version>0.15</version>
+      <version>${compile-testing.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.kotlintest</groupId>
       <artifactId>kotlintest-runner-junit5</artifactId>
-      <version>3.3.0</version>
+      <version>${kotlintest-runner-junit5.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -218,7 +242,7 @@
     <dependency>
       <groupId>io.mockk</groupId>
       <artifactId>mockk</artifactId>
-      <version>1.9.3</version>
+      <version>${mockk.version}</version>
       <scope>test</scope>
     </dependency>
       <dependency>
@@ -259,7 +283,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>${maven-compiler-plugin.version}</version>
         <executions>
           <!-- Replacing default-compile as it is treated specially by maven -->
           <execution>
@@ -296,7 +320,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
+        <version>${maven-release-plugin.version}</version>
         <configuration>
           <localCheckout>true</localCheckout>
           <pushChanges>false</pushChanges>
@@ -307,7 +331,7 @@
           <dependency>
             <groupId>org.apache.maven.scm</groupId>
             <artifactId>maven-scm-provider-gitexe</artifactId>
-            <version>1.9.5</version>
+            <version>${maven-scm-provider-gitexe.version}</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -315,7 +339,7 @@
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.7</version>
+        <version>${nexus-staging-maven-plugin.version}</version>
         <extensions>true</extensions>
         <configuration>
           <serverId>ossrh</serverId>
@@ -339,7 +363,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>${maven-source-plugin.version}</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -349,10 +373,11 @@
           </execution>
         </executions>
       </plugin>
+<!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>${maven-javadoc-plugin.version}</version>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -362,6 +387,7 @@
           </execution>
         </executions>
       </plugin>
+-->
     </plugins>
 
   </build>
@@ -380,7 +406,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.6</version>
+            <version>${maven-gpg-plugin.version}</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
