--- a/aws/pom.xml
+++ b/aws/pom.xml
@@ -289,8 +289,7 @@
           </execution>
         </executions>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <release>${java.version}</release>
         </configuration>
       </plugin>
 
