--- a/core/pom.xml
+++ b/core/pom.xml
@@ -192,8 +192,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>${java.version}</release>
                 </configuration>
             </plugin>
 
