Remove release parameter

--- a/aws/pom.xml
+++ b/aws/pom.xml
@@ -244,6 +244,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
         <executions>
           <!-- Replacing default-compile as it is treated specially by maven -->
           <execution>
@@ -270,9 +274,6 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <release>${java.version}</release>
-        </configuration>
       </plugin>
 
 
