Add java version parameter

--- a/aws/pom.xml
+++ b/aws/pom.xml
@@ -245,8 +245,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
         <executions>
           <!-- Replacing default-compile as it is treated specially by maven -->
