--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
                 <executions>
                     <!-- Replacing default-compile as it is treated specially by maven -->
                     <execution>
@@ -123,9 +127,6 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <release>${java.version}</release>
-                </configuration>
             </plugin>
 
 
