Add release java version parameter

--- a/azure/pom.xml
+++ b/azure/pom.xml
@@ -218,6 +218,7 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <release>${java.version}</release>
                 </configuration>
                 <executions>
                     <!-- Replacing default-compile as it is treated specially by maven -->
